kubernetes/komga/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: komga
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: komga
  template:
    metadata:
      labels:
        app: komga
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: komga
        image: gotson/komga:1.27.0@sha256:341f1e7dbd48a42f4df7d0af40f7a6644d7db0b2ed6ea8cbc8c0ccaa71e48b66
        ports:
        - containerPort: 25600
          name: http
        startupProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: library
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: komga-config
      - name: library
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/books/komga
