kubernetes/komga/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: komga

spec:
  selector:
    app: komga
  ports:
  - protocol: TCP
    port: 25600
    targetPort: http
    name: http
  type: ClusterIP
